<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/wedding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/banner"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_have_services_all_over_india_book_your_appointments_with_salon_mandap_makeup_catering_clothing_shoppings_etc"
        android:textColor="#50A605"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/reach_us_at_9123456789"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_imi_indianmatrimoni_com"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:textColor="@color/black"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_account"
        android:layout_gravity="right"
       android:background="@drawable/oval_button"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        tools:ignore="RtlHardcoded" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/select_city"
    android:textColor="#383838"
    android:paddingStart="@dimen/_10sdp"/>

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get the Best Wedding Service Provider"
        android:textColor="#FC7700"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textStyle="normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/catering"
                android:text="Catering"
                android:textColor="@color/white"
                android:gravity="center"/>

        <TextView
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_114sdp"
            android:background="@drawable/mandap1"
            android:gravity="center"
            android:text="decoration"
            android:textColor="@color/white"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/decoration"/>

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/planners"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp">

                <TextView
                    android:layout_width="@dimen/_160sdp"
                    android:layout_height="@dimen/_114sdp"
                    android:background="@drawable/music"/>

                <TextView
                    android:layout_width="@dimen/_160sdp"
                    android:layout_height="@dimen/_114sdp"
                    android:background="@drawable/photography"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/others"/>

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/mehendi"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/makeup"/>

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/jewellery"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/apprels"/>

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/vehicles"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/invitation"/>

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/gifts"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/honeymoon"/>

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/pandit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/astrologer"/>

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/certificate"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/housing"/>

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/insurance"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_114sdp"
                android:background="@drawable/others"/>

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_340sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/banner"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"/>
    </LinearLayout>
</ScrollView>